<resources>
    <string name="app_name">DPI Changer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="setup_intro_title">Setup</string>
    <string name="setup_root_title">Are you rooted?</string>
    <string name="setup_no_root_title">No Root?</string>
    <string name="get_root">Get Root</string>
    <string name="root_desc">If you are, this\'ll be easy. Press the button below to confirm root access.</string>
    <string name="next">Next</string>
    <string name="intro_desc">The setup will guide you through the steps needed to get up and running.</string>
    <string name="intro_desc2">This app will allow you to change you phone\'s DPI, whether or not you have root.</string>
    <string name="no_root">Run the following commands using ADB:</string>
    <string name="test">Test</string>
    <string name="adb_setup_failed">It seems the permissions setup didn\'t work. Are you sure you set everything up?</string>
    <string name="setup_done">Great! You\'re done! Go change that DPI.</string>
    <string name="setup_done_title">Almost Done!</string>
    <string name="setup_done_desc">Just make sure you have the necessary permissions by pressing the TEST button.</string>
    <string name="dpi_value_hint">Currently:</string>
    <string name="apply">Apply</string>
    <string name="no_root_dpi_apply_instructions">Since you aren\'t rooted, that unfortunately means you\'ll also need to reboot after applying.</string>
    <string name="setup">Setup</string>
    <string name="dpi">DPI</string>
    <string name="x">X</string>
    <string name="resolution">Resolution</string>
    <string name="reset">Reset</string>
    <string name="below_18_warning">Since you are on an Android version below 4.3, you\'ll also need to reboot after applying.</string>
</resources>
