<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/setup_no_root_title"
                android:textAlignment="center"
                android:textSize="26sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/no_root"
                android:textAlignment="center"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:foregroundGravity="center_horizontal"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <HorizontalScrollView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    tools:ignore="UselessParent">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:background="#555"
                        android:orientation="vertical"
                        android:paddingBottom="16dp"
                        android:paddingTop="16dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="monospace"
                            android:paddingEnd="5dp"
                            android:paddingStart="5dp"
                            android:text="adb shell pm grant com.zacharee1.dpichanger android.permission.WRITE_SECURE_SETTINGS"
                            android:textAlignment="textStart"
                            android:layout_gravity="start"
                            android:textColor="#fff"
                            android:textIsSelectable="true"
                            tools:ignore="HardcodedText"
                            tools:targetApi="jelly_bean" />

                    </LinearLayout>
                </HorizontalScrollView>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <Button
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:onClick="nextPage"
        android:text="@string/next" />

</LinearLayout>