<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.zacharee1.dpichanger.DPIActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <LinearLayout
            android:id="@+id/dpi_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:nextFocusDown="@id/dpi_main"
            android:nextFocusForward="@id/dpi_main"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/main_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/app_name"
                android:textAlignment="center"
                android:textSize="26sp" />

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardElevation="1dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1">

                            <android.support.design.widget.TextInputEditText
                                android:id="@+id/dpi_value"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="number"
                                android:textSize="12sp" />
                        </android.support.design.widget.TextInputLayout>

                        <Button
                            android:id="@+id/apply_dpi"
                            style="@style/Widget.AppCompat.Button.Colored"
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:text="@string/apply" />

                    </LinearLayout>

                    <TextView
                        android:id="@+id/no_root_instructions"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        android:text="@string/no_root_dpi_apply_instructions"
                        android:textAlignment="center" />
                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
